--- a/bin/scripts/Scripts.csproj
+++ b/bin/scripts/Scripts.csproj
@@ -180,9 +180,11 @@
   <ItemGroup>
     <Compile Include="Bots\DuelBot\DuelBot.cs" />
     <Compile Include="Bots\FollowBot\FollowBot.cs" />
+    <Compile Include="GameTypes\AxiCTF\ZonePoll.cs" />
     <Compile Include="GameTypes\Basic\Basic.cs" />
     <Compile Include="GameTypes\Blank\Blank.cs" />
     <Compile Include="GameTypes\BugHunt\BugHunt.cs" />
+    <Compile Include="GameTypes\AxiCTF\CTF.cs" />
     <Compile Include="GameTypes\CTFHQ\Bots\BasicDefense.cs" />
     <Compile Include="GameTypes\CTFHQ\Bots\Captain.cs" />
     <Compile Include="GameTypes\CTFHQ\Bots\Engineer.cs" />
@@ -200,8 +202,10 @@
     <Compile Include="GameTypes\FantasyZone\Fantasy.cs" />
     <Compile Include="GameTypes\FantasyZone\Objects\Book.cs" />
     <Compile Include="GameTypes\FantasyZone\Objects\Chest.cs" />
+    <Compile Include="GameTypes\FantasyZone\Objects\HQ.cs" />
     <Compile Include="GameTypes\FantasyZone\Objects\Recipe.cs" />
-    <Compile Include="GameTypes\FantasyZone\Objects\Vendor.cs" />    <Compile Include="GameTypes\GravBall\Gravball.cs" />
+    <Compile Include="GameTypes\FantasyZone\Objects\Vendor.cs" />
+    <Compile Include="GameTypes\GravBall\Gravball.cs" />
     <Compile Include="GameTypes\HQ\Headquarters.cs" />
     <Compile Include="GameTypes\Dodgeball\Dodgeball.cs" />
     <Compile Include="GameTypes\Frontlines\TDM.cs" />
