--- a/trunk/InfServer.Database/InfServer.Database.csproj
+++ b/trunk/InfServer.Database/InfServer.Database.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Logic\Chats.cs" />
     <Compile Include="Logic\Commands\Chat.cs" />
     <Compile Include="Logic\Commands\Mod.cs" />
+    <Compile Include="Logic\Helpers\Admins.cs" />
     <Compile Include="Logic\Login.cs" />
     <Compile Include="Logic\Player.cs" />
     <Compile Include="Logic\Stats.cs" />
@@ -143,6 +144,7 @@
       <Name>InfServer.Network</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
