--- a/trunk/InfServer.DBComm/InfServer.DBComm.csproj
+++ b/trunk/InfServer.DBComm/InfServer.DBComm.csproj
@@ -97,9 +97,9 @@
     <Compile Include="Helpers\Database.cs" />
     <Compile Include="Helpers\PacketIDs.cs" />
     <Compile Include="Packets\Commands\Chat\CS_ChartQuery.cs" />
-    <Compile Include="Packets\Commands\Chat\CS_Query.cs" />
+    <Compile Include="Packets\Commands\Chat\CS_ChatQuery.cs" />
     <Compile Include="Packets\Commands\Chat\CS_Squads.cs" />
-    <Compile Include="Packets\Commands\Mod\CS_Alias.cs" />
+    <Compile Include="Packets\Commands\Mod\CS_ModQuery.cs" />
     <Compile Include="Packets\Commands\Mod\CS_Ban.cs" />
     <Compile Include="Packets\Login\CS_ArenaUpdate.cs" />
     <Compile Include="Packets\Login\CS_Auth.cs" />
