--- a/trunk/bin/scripts/Scripts.csproj
+++ b/trunk/bin/scripts/Scripts.csproj
@@ -180,8 +180,10 @@
   <ItemGroup>
     <Compile Include="Bots\DuelBot\DuelBot.cs" />
     <Compile Include="Bots\FollowBot\FollowBot.cs" />
+    <Compile Include="Bots\TeamBot\TeamBot.cs" />
     <Compile Include="GameTypes\AxiCTF\ZonePoll.cs" />
     <Compile Include="GameTypes\Basic\Basic.cs" />
+    <Compile Include="GameTypes\BasketBall\Bball.cs" />
     <Compile Include="GameTypes\Blank\Blank.cs" />
     <Compile Include="GameTypes\BugHunt\BugHunt.cs" />
     <Compile Include="GameTypes\AxiCTF\CTF.cs" />
